--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,23 @@
       </div>
     </div>
 
+    <div id="journalModal" class="modal">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h2>Journal Entry</h2>
+      <span class="close-btn" onclick="closeJournal()">&times;</span>
+    </div>
+    <div class="modal-body">
+      <div class="journal-verse-reference" id="journalVerseReference"></div>
+      <div class="journal-verse-text" id="journalVerseText"></div>
+      <textarea id="journalTextarea" placeholder="Your thoughts..."></textarea>
+    </div>
+    <div class="modal-footer">
+      <button id="saveJournalBtn" onclick="saveJournal()">Save</button>
+    </div>
+  </div>
+</div>
+
     <script src ="index.js"></script>
   </body>
 </html>
